--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(cxx_library_tests)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(cxx_library_tests main.cpp)
+add_executable(cxx_library_tests main.cpp
+        add_seven.cpp)
