--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,6 @@ project(cxx_library_tests)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(cxx_library_tests main.cpp
-        add_seven.cpp)
+        add_seven.cpp
+        array_recasting.h
+        array_recasting.cpp)
