Pull functionality out of add_seven.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,9 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(cxx_library_tests main.cpp
         add_seven.cpp
         array_recasting.h
-        array_recasting.cpp)
+        array_recasting.cpp
+        int_seven.cpp
+        int_seven.h
+        array_seven.cpp
+        array_seven.h
+)
